--- a/Quack/templates/index.html
+++ b/Quack/templates/index.html
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quack</title>
+  <!-- <link rel = "stylesheet" href = "css/style_index.css"> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel = "stylesheet" href = "../static/css/style_index.css">
+
   <style>
+   
+  
+
   
   /* html {
   scroll-behavior: smooth;
@@ -15,6 +21,7 @@
   .navbar {
       background-color: #F8D586;
       border-bottom: 2px solid #000000; 
+    /* sticky */
     } 
 
     body{
@@ -116,9 +123,7 @@
   scroll-behavior: smooth;
 }
 
-/* body {
-  min-height: 200vh;
-} */
+
 
 body {
       min-height: 100vh;
@@ -130,9 +135,16 @@ body {
   background-color: #F8D586;
 }
 
+.test{
+    height: 500px;
+}
+
+
+ 
 
   </style>
 
+ 
 </head>
 <header>
   
@@ -198,13 +210,44 @@ body {
 
 
     <div id = "down" class="section scroll_to_text">
-    <p>With CodeQuacker by quack!, explaining your coding problems is the key to solving them! Inspired by the rubber duck debugging method, our platform encourages students to articulate their challenges, whether technical or conceptual, to find clarity and solutions. CodeQuacker is an AI-assisted tool that takes in your buggy code, either verbally or textually, and outputs the best suggestions to tackle your coding issues. Now, Let's get to quacking the code!</p>
+    <!-- <p>With CodeQuacker by quack!, explaining your coding problems is the key to solving them! Inspired by the rubber duck debugging method, our platform encourages students to articulate their challenges, whether technical or conceptual, to find clarity and solutions. CodeQuacker is an AI-assisted tool that takes in your buggy code, either verbally or textually, and outputs the best suggestions to tackle your coding issues. Now, Let's get to quacking the code!</p> -->
     </div>
 
 
-<div class="test">
-    <p>Test</p>
-</div>
+    <!-- TEST -->
+
+
+    <div class="slider">
+        <div class = "slider_circles">
+        <input type="radio" name="slider" title="slide1" checked="checked" class="slider__nav"/>
+        <input type="radio" name="slider" title="slide2" class="slider__nav"/>
+        <input type="radio" name="slider" title="slide3" class="slider__nav"/>
+        <input type="radio" name="slider" title="slide4" class="slider__nav"/>
+    </div>
+        <div class="slider__inner">
+          <div class="slider__contents"><i class="slider__image fa fa-codepen"></i>
+            <h2 class="slider__caption">codepen</h2>
+            <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
+          </div>
+          <div class="slider__contents"><i class="slider__image fa fa-newspaper-o"></i>
+            <h2 class="slider__caption">newspaper-o</h2>
+            <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
+          </div>
+          <div class="slider__contents"><i class="slider__image fa fa-television"></i>
+            <h2 class="slider__caption">television</h2>
+            <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
+          </div>
+          <div class="slider__contents"><i class="slider__image fa fa-diamond"></i>
+            <h2 class="slider__caption">diamond</h2>
+            <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
+          </div>
+        </div>
+      </div>
+
+
+
+
+<!-- end test -->
 
 
 
